
// ------------------------------------------------------------------------------------------------------------------
// This is auto generated code. Every manually change in this code will be overwritten at the next code generation! |
// ------------------------------------------------------------------------------------------------------------------
        
using DoofesZeug.Attributes;
using DoofesZeug.Attributes.Documentation;
using DoofesZeug.Attributes.Pattern;



namespace DoofesZeug.Models.Specieses.Human.Professions
{
    [Description("This is an specialized entitiy for an hairdresser.")]
    [Generated]
    [Builder]
    public class HairDresser : Profession
    {
        public HairDresser() : base(WellKnownProfession.HairDresser)
        {
        }
    }
}
